2010-06-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14605: rootline says "pid" where it should be "uid" or just "ID"
	* Fixed bug #14668: Bug: Make flashupload work again (Thanks to Patrick Bahne)

2010-06-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Cleanup #14405: Rename test cases from *_testcase to *Test (Thanks to Stefano Kowalke)

2010-06-10  Susanne Moog  <typo3@susanne-moog.de>

	* Added feature #8778: Add possibility to disable TYPO3 draft workspace by localconf.php configuration (Thanks to Sonja Scholz)
	* Cleanup #14683: Remove misc/phpcheck/ directory (Thanks to Sebastian Michaelsen)

2010-06-10  Francois Suter  <francois@typo3.org>

	* Fixed bug #14685: Some status reports classes have wrong XCLASS inclusion (thanks to Peter Niederlag)

2010-06-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #14662: htmlArea RTE: Should use t3lib_utility_Client::getBrowserInfo
	* Fixed bug #14691: htmlArea RTE: Hitting ENTER in absence of block element may produce non-valid html in non-IE browser
	* Fixed bug #14692: t3lib_utility_client is not working with php 5.2.0 (Thanks to Franz Koch)

2010-06-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #5117: typolink: cHash corrupted due to linkVars (together with Pierre Dudoret (Popy))

2010-06-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14677: htmlArea RTE: Toolbar state incorect in the absence of block element
	* Follow-up to issue #14662: htmlArea RTE: Should use t3lib_utility_Client::getBrowserInfo

2010-06-09  Steffen Kamper  <info@sk-typo3.de>

	* Added test case for #14663: t3lib_utility_Client::getBrowserInfo returns gecko build date rather than version
	* Fixed bug #14663: t3lib_utility_Client::getBrowserInfo returns gecko build date rather than version
	* Fixed bug #14673: Usage of debug() in BE use group *line* by default
	* Fixed bug #14674: Replace calls to t3lib_extMgm:: within t3lib_extMgm to self:: due to performance reasons (Thanks to Sebastian Michaelsen)